--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,25 @@
 @import "tailwindcss";
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.box-empty {
+  @apply h-14 w-14 rounded border
+}
+
+.btn-kb {
+  @apply bg-stone-600 text-zinc-100 font-bold rounded h-12 w-10
+}
+
+.btn-wide {
+  @apply bg-stone-600 text-zinc-100 font-bold rounded h-12 w-18
+}
