--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 @theme {
   --color-correct: oklch(62.7% 0.194 149.214);
@@ -12,6 +13,7 @@ body, html {
   padding: 0;
   height: 100%;
   width: 100%;
+  font-family: "Inter", sans-serif;
 }
 
 #root {
@@ -20,7 +22,7 @@ body, html {
 }
 
 .box-letter {
-  @apply h-12 w-12 sm:h-14 sm:w-14 rounded border text-3xl sm:text-4xl grid place-items-center
+  @apply h-12 w-12 sm:h-14 sm:w-14 rounded-md border border-2 border-stone-600 text-3xl font-semibold sm:text-4xl grid place-items-center
 }
 
 .btn-kb {
